--- a/app/views/user/set_new_password.erb
+++ b/app/views/user/set_new_password.erb
@@ -26,41 +26,41 @@
 
     <% form_for :set_new_password do |u| %>
 
-    <div id="login_area">
-      <label for="username"><%= t('new_password') %></label>
-      <div id="username_textbox_bg">
+      <div id="login_area">
+        <label for="username"><%= t('new_password') %></label>
+        <div id="username_textbox_bg">
           <%= u.password_field :new_password %>
-      </div>
+        </div>
 
-      <label for="password"><%= t('confirm_password') %></label>
-      <div id="password_textbox_bg">
-        <%= u.password_field :confirm_password %>
-      </div>
+        <label for="password"><%= t('confirm_password') %></label>
+        <div id="password_textbox_bg">
+          <%= u.password_field :confirm_password %>
+        </div>
 
-      <div id="resetpw_area">
-        <%= submit_tag "#{t('reset')}", :class => "submit" %>
-      </div>
+        <div id="resetpw_area">
+          <%= submit_tag "#{t('reset')}", :class => "submit" %>
+        </div>
 
 
-      <% unless flash[:notice].nil? %>
-        <div id="notice"> <%= flash[:notice] %></div>
-      <% end %>
+        <% unless flash[:notice].nil? %>
+          <div id="notice"> <%= flash[:notice] %></div>
+        <% end %>
 
       </div>
     </div>
-    <% end %>
-  </div>
+  <% end %>
+</div>
 
-  <div id="help_forgot_pw">
-    <div id="footer_links">
-      &nbsp;
+<div id="help_forgot_pw">
+  <div id="footer_links">
+    &nbsp;
+  </div>
+</div>
+
+<div id="footer">
+  <div id="footer_logo">
+    <div id="powered_by">
+      <%= t('powered_by') %> <a href=<%= "#{FEDENA_SETTINGS[:company_url]}" %> target="_blank"><%= FEDENA_SETTINGS[:company_name] %></a>
     </div>
   </div>
-
-  <div id="footer">
-    <div id="footer_links">
-      <a href=""><%= t('faq') %></a> <span>|</span>
-      <a href="">Fedena</a> <span>|</span>
-      <a href=""><%= t('support') %></a>
-    </div>
-  </div>
+</div>
