--- a/public/stylesheets/_layouts/dashboard.css
+++ b/public/stylesheets/_layouts/dashboard.css
@@ -3,28 +3,30 @@ body {
     font-family:Arial;
     margin:0;
     padding:0px;
-  }
+}
 .extender {
     height:1px;
     clear:both;
 }
 #header_bg {
-    height : 60px;
-    background : #b00 url(../../images/application/app_layout_header_bg.png) repeat;
+    height : 80px;
+    background : #b00 url(../../images/application/pattern_fedena_header.png) repeat;
 }
 #header {
-    width : 980px; height : 60px;
+    width : 980px; 
+    height : 80px;
     margin:0 auto;
 }
 #header_link {
     color : #fff;
     height : 22px;
     float: right;
-    font-size : 0.9em;
+    font-size : 0.8em;
     padding : 10px 0 0 0;
 }
 #outer-main-menu {
     float: left;
+    margin: 20px 0 0 0;
 }
 #outer-header-link{
     height: 32px;
@@ -70,7 +72,7 @@ body {
     width : 160px;
     list-style-type: none;
     position: absolute;
-    top: 60px;
+    top: 80px;
     z-index: 999;
     visibility : hidden;
     border : 1px solid black;
@@ -165,7 +167,7 @@ p.flash-msg {
     text-align : center;
 }
 #content_wrapper {
-    width:970px;
+    width:980px;
     margin:0 auto;
     background-color:#fff;
 }
@@ -180,7 +182,7 @@ p.flash-msg {
 }
 
 #content {
-    width:770px;
+    width: 100%;
     float:left;
 }
 
@@ -395,8 +397,8 @@ body > #content_wrapper {
     color : #fff;
 }
 .anylinkmenu a:hover { /*hover background color*/
-    background: black;
-    color: white;
+                       background: black;
+                       color: white;
 }
 
 /* Alternate multi-column class for drop down menus */
@@ -559,11 +561,12 @@ body > #content_wrapper {
 #powered_by {
     height:20px;
     padding:35px 0 0 0;
-    width:980px;
+    width:auto;
     margin:0 auto;
     color:#fff;
     font-size:12px;
     font-weight:bold;
+    float: right;
 }
 #powered_by a {
     color:#fff;
@@ -576,3 +579,100 @@ body > #content_wrapper {
     text-decoration:underline;
 }
 
+#news_bar{
+    width: 100%;
+/*    height: 67px;*/
+    overflow: hidden;
+    margin: 20px 0 0 0;
+}
+#news_bar .news_box{
+    width: 313px;
+    height: 66px;
+    background: url(/images/application/note-bg.png) no-repeat;
+    float: left;
+    margin: 0 0 0 15px;
+}
+#news_bar .news_box.first-news{
+    margin: 0;
+}
+#news_bar .news_box .news-title{
+    width: 283px;
+    margin: 12px 0 5px 15px;
+}
+#news_bar .news_box .news-title a{
+    width: 313px;
+    font-size: 13px;
+    color: #c80000;
+    font-weight: bold;
+    text-decoration: none;
+}
+#news_bar .news_box .news-title a:hover{
+    text-decoration: underline;
+}
+#news_bar .news_box .news-time{
+    float: left;
+    color: #666666;
+    margin: 0 0 0 15px;
+}
+#news_bar .news_box .comments-count{
+    float: right;
+    color: #666666;
+    margin: 0 15px 0 0;
+    padding: 0 0 0 20px;
+    background: url(/images/application/chat.png) no-repeat left;
+}
+#news_bar .news_box .comments-count a{
+    color: #666666;
+    text-decoration: none;
+}
+#news_bar .news_box .comments-count a:hover{
+    text-decoration: underline;
+}
+
+#institution-name{
+    margin: 12px 0 0 0;
+    float: left;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#header_link{
+    overflow: hidden;
+}
+#header_link div{
+    float: left;
+    margin: 0 5px;
+    padding: 0 5px;
+    overflow: hidden;
+}
+#header_link div a{
+    padding: 3px 3px 3px 23px;
+    display: block;
+    float: left;
+    text-decoration: none;
+}
+#profile-link a{
+    background: url(/images/application/profile.png) no-repeat left center;
+}
+#messages-link a{
+    background: url(/images/application/msg.png) no-repeat left center;
+    float: left;
+}
+#messages-link span {
+    padding: 3px 3px 3px 1px;
+    display: block;
+    float: left;
+}
+#logout-link a{
+    background: url(/images/application/logout.png) no-repeat left center;
+}
+#logout-link{
+    margin-right: 0 !important;
+}
+#profile-link:hover, #messages-link:hover, #logout-link:hover{
+    background: url(/images/application/top-link-bg.png) repeat;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
