--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -9,18 +9,19 @@ body {
     clear:both;
 }
 #header_bg {
-    height : 60px;
-    background : #b00 url(../../images/application/app_layout_header_bg.png) repeat;
+    height : 80px;
+    background : #b00 url(../../images/application/pattern_fedena_header.png) repeat;
 }
 #header {
-    width : 980px; height : 60px;
+    width : 980px; 
+    height : 80px;
     margin:0 auto;
 }
 #header_link {
     color : #fff;
     height : 22px;
     float: right;
-    font-size : 0.9em;
+    font-size : 0.8em;
     padding : 10px 0 0 0;
 }
 #header a {
@@ -45,6 +46,7 @@ body {
 }
 #outer-main-menu {
     float: left;
+    margin: 20px 0 0 0;
 }
 #outer-header-link {
     height: 32px;
@@ -55,7 +57,7 @@ body {
 #header_link {
     color: #FFFFFF;
     float: right;
-    font-size: 0.9em;
+    font-size: 0.8em;
     height: 25px;
     padding: 10px 0 0;
 }
@@ -93,7 +95,7 @@ body {
     width : 160px;
     list-style-type: none;
     position: absolute;
-    top: 60px;
+    top: 80px;
     z-index: 999;
     visibility : hidden;
     border : 1px solid black;
@@ -939,11 +941,12 @@ tr.tr-blank{
 #powered_by {
     height:20px;
     padding:35px 0 0 0;
-    width:980px;
+    width:auto;
     margin:0 auto;
     color:#fff;
     font-size:12px;
     font-weight:bold;
+    float: right;
 }
 #powered_by a {
     color:#fff;
@@ -957,11 +960,57 @@ tr.tr-blank{
 }
 #outer-autosuggest-menu{
 float: right;
-margin-right: 94px;
-margin-top: 6px;
-width: 245px;
+margin-top: 26px;
+width: 329px;
 }
 #autosuggest_menu_input{
 width: 300px;
 height: 14px;
+}
+#institution-name{
+    margin: 12px 0 0 0;
+    float: left;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#header_link{
+    overflow: hidden;
+}
+#header_link div{
+    float: left;
+    margin: 0 5px;
+    padding: 0 5px;
+    overflow: hidden;
+}
+#header_link div a{
+    padding: 3px 3px 3px 23px;
+    display: block;
+    float: left;
+    text-decoration: none;
+}
+#profile-link a{
+    background: url(/images/application/profile.png) no-repeat left center;
+}
+#messages-link a{
+    background: url(/images/application/msg.png) no-repeat left center;
+    float: left;
+}
+#messages-link span {
+    padding: 3px 3px 3px 1px;
+    display: block;
+    float: left;
+}
+#logout-link a{
+    background: url(/images/application/logout.png) no-repeat left center;
+}
+#logout-link{
+    margin-right: 0 !important;
+}
+#profile-link:hover, #messages-link:hover, #logout-link:hover{
+    background: url(/images/application/top-link-bg.png) repeat;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
