removed validations for presence of student, employee, user and guardian; removed auto creation of email
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2871 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/profile.erb
+++ b/app/views/student/profile.erb
@@ -104,7 +104,7 @@
 
       <tr class="odd left"><td><%= t('category') %></td><td class="right"><%= @student.student_category.name unless @student.student_category.nil? %></td></tr>
       <tr class="even left"><td><%= t('religion') %></td><td class="right"><%= @student.religion %></td></tr>
-      <tr class="odd left"><td><%= t('address') %></td><td class="right"><%= @student.address_line1%>, <%=  @student.address_line2 %></td></tr>
+      <tr class="odd left"><td><%= t('address') %></td><td class="right"><%= @student.address_line1%><%= ', ' unless @student.address_line1.blank? %><%=  @student.address_line2 %></td></tr>
 <%#*<tr class="even left"><td></td><td class="right"><%= @student.address_line2%>
       <tr class="even left"><td><%= t('city') %></td><td class="right"><%= @student.city %></td></tr>
       <tr class="odd left"><td><%= t('state') %></td><td class="right"><%= @student.state %></td></tr>
