employee email moved to first page during admission
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2881 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/admission1.erb
+++ b/app/views/employee/admission1.erb
@@ -73,6 +73,12 @@
         <div class="text-input-bg"><%= a.text_field :last_name %></div>
       </div>
       <hr class="label-underline"></hr>
+      <div class="label-field-pair">
+        <label><%= t('email') %></label>
+        <div class="text-input-bg"><%= a.text_field :email %></div>
+        <div class="extender"></div>
+      </div>
+      <hr class="label-underline"></hr>
       <div class="label_field_pair">
         <label class="label_for_employee_gender" for="master_student_gender"><%= t('gender') %></label>
         <div class="employee_gender_value">
