news caching : cache name changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2896 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<% cache 'latest_news' do%>
+<% cache News.cache_fragment_name do%>
   <%= render :partial=>'news_bar' %>
 <% end %>
 
