--- a/app/views/finance/report_compare.html.erb
+++ b/app/views/finance/report_compare.html.erb
@@ -96,8 +96,13 @@
     <tr class="tr-<%=cycle('even','odd')%>">
       <td class="col-1"><%= index+=1 %></td>
       <td class="col-2"><%= link_to "#{t(category[:category_name]+'_account')}" , category[:destination].merge(:start => @start_date,:end => @end_date)%> </td>
-      <td></td>
-      <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"]%></td>
+      <% if @category_transaction_totals["#{category[:category_name]}"][:category_type] == "income"%>
+        <td></td>
+        <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"][:amount]%></td>
+      <% else %>
+        <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"][:amount]%></td>
+        <td></td>
+      <% end %>
       <td class="col-3"> - </td>
     </tr>
   <% end %>
@@ -193,8 +198,13 @@
     <tr class="tr-<%=cycle('even','odd')%>">
       <td class="col-1"><%= index+=1 %></td>
       <td class="col-2"><%= link_to "#{t(category[:category_name]+'_account')}" , category[:destination].merge(:start => @start_date2,:end => @end_date2)%> </td>
-      <td></td>
-      <td class="col-3" align="right"><%=@category_transaction_totals2["#{category[:category_name]}"]%></td>
+      <% if @category_transaction_totals["#{category[:category_name]}"][:category_type] == "income"%>
+        <td></td>
+        <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"][:amount]%></td>
+      <% else %>
+        <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"][:amount]%></td>
+        <td></td>
+      <% end %>
       <td class="col-3"> - </td>
     </tr>
   <% end %>
