--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -50,12 +50,12 @@
 
       <div class="label-field-pair">
         <div class="label-container"><%= t('start_date') %></div>
-        <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]', Date.today %></div>
+        <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]',  I18n.l(Date.today,:format=>:default) %></div>
       </div>
 
       <div class="label-field-pair">
         <div class="label-container"><%= t('end_date') %></div>
-        <div class="input-container"><%= calendar_date_select_tag 'batch[end_date]', Date.today + 1.year %></div>
+        <div class="input-container"><%= calendar_date_select_tag 'batch[end_date]',  I18n.l(Date.today + 1.year,:format=>:default) %></div>
       </div>
 <% unless @grade_types.blank? %>
     <div class="label-field-pair">
