rtl styles for new header design
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3011 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1014,3 +1014,6 @@ height: 14px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
 }
+textarea{
+    font-family: Arial !important;
+}
