--- a/public/stylesheets/rtl/application.css
+++ b/public/stylesheets/rtl/application.css
@@ -9,18 +9,19 @@ body {
     clear:both;
 }
 #header_bg {
-    height : 60px;
-    background : #b00 url(../../../images/application/app_layout_header_bg.jpg) repeat;
+    height : 80px;
+    background : #b00 url(/images/application/pattern_fedena_header.png) repeat;
 }
 #header {
-    width : 980px; height : 60px;
+    width : 980px;
+    height : 80px;
     margin:0 auto;
 }
 #header_link {
     color : #fff;
     height : 22px;
     float: left;
-    font-size : 0.9em;
+    font-size : 0.8em;
     padding : 10px 0 0 0;
 }
 #header a {
@@ -45,6 +46,7 @@ body {
 }
 #outer-main-menu {
     float: right;
+    margin: 20px 0 0 0;
 }
 #outer-header-link {
     height: 32px;
@@ -55,7 +57,7 @@ body {
 #header_link {
     color: #FFFFFF;
     float: left;
-    font-size: 0.9em;
+    font-size: 0.8em;
     height: 25px;
     padding: 10px 0 0;
 }
@@ -93,7 +95,7 @@ body {
     width : 160px;
     list-style-type: none;
     position: absolute;
-    top: 60px;
+    top: 80px;
     z-index: 999;
     visibility : hidden;
     border : 1px solid black;
@@ -195,8 +197,8 @@ p.flash-msg {
 }
 #side_bar { float:right; width:200px; }
 #fedena_logo {
-    background: #fff url(../../../images/application/app_fedena_logo.jpg) center center no-repeat;
-    height: 107px;
+    width: 157px;
+    text-align: center;
     margin-top: 30px;
 }
 #content { float: right; width: 980px; }
@@ -451,12 +453,12 @@ body > #content_wrapper {
 
 }
 .errorExplanation {
-    background: #ffdedf url(/../images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto; width : 510px;
     margin : 20px auto;
-    padding: 15px 0 19px 47px;
+    padding : 10px 20px 20px 0;
 }
 .errorExplanation h2 {
     margin : 5px 20px 0 0;
@@ -821,7 +823,7 @@ table#listing td.col-5{
 }
 table#listing td.col-6{
     text-align: left;
-    width:13%;
+   width:13%;
     padding: 5px;
     padding-right:10px;
 }
@@ -891,15 +893,15 @@ tr.tr-blank{
     margin-bottom: 10px;
 }
 .bread_crumb a {
-    color:#000;
+   color:#000;
     text-decoration: none;
 }
 .bread_crumb a:hover {
-    color:#bb0000;
+   color:#bb0000;
     text-decoration: underline;
 }
 #error-box {
-    background: #ffdedf url(/../images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto;
@@ -912,9 +914,9 @@ tr.tr-blank{
     margin-top : -33px; */
     height : 66px;
     clear : both;
-    background: url(/../images/foot.png) repeat-x;
+    background: url(/images/foot.png) repeat-x;
     width:100%;
-    margin-top:15px;
+     margin-top:15px;
 }
 #footer_logo {
     height:66px;
@@ -928,22 +930,23 @@ tr.tr-blank{
     height:66px;
     margin-top:-55px;
     width:210px;
-    background: url(/../images/footer-logo.png) no-repeat 0 0 transparent;
+    background: url(/images/footer-logo.png) no-repeat 0 0 transparent;
 }
 
 #footer_logo a.footer-logo:hover {
-    background: url(/../images/footer-logo.png) no-repeat -210px 0 transparent;
+    background: url(/images/footer-logo.png) no-repeat -210px 0 transparent;
 
 }
 
 #powered_by {
     height:20px;
     padding:35px 0 0 0;
-    width:980px;
+    width:auto;
     margin:0 auto;
     color:#fff;
     font-size:12px;
     font-weight:bold;
+    float: left;
 }
 #powered_by a {
     color:#fff;
@@ -956,12 +959,61 @@ tr.tr-blank{
     text-decoration:underline;
 }
 #outer-autosuggest-menu{
-    float: left;
-    margin-left: 94px;
-    margin-top: 6px;
-    width: 245px;
+float: left;
+margin-top: 26px;
+width: 329px;
 }
 #autosuggest_menu_input{
-    width: 300px;
-    height: 14px;
+width: 300px;
+height: 14px;
+}
+#institution-name{
+    margin: 12px 0 0 0;
+    float: right;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#header_link{
+    overflow: hidden;
+}
+#header_link div{
+    float: right;
+    margin: 0 5px;
+    padding: 0 5px;
+    overflow: hidden;
+}
+#header_link div a{
+    padding: 3px 23px 3px 3px;
+    display: block;
+    float: right;
+    text-decoration: none;
+}
+#profile-link a{
+    background: url(/images/application/profile.png) no-repeat right center;
+}
+#messages-link a{
+    background: url(/images/application/msg.png) no-repeat right center;
+    float: right;
+}
+#messages-link span {
+    padding: 3px 1px 3px 3px;
+    display: block;
+    float: right;
+}
+#logout-link a{
+    background: url(/images/application/logout.png) no-repeat right center;
+}
+#logout-link{
+    margin-left: 0 !important;
+}
+#profile-link:hover, #messages-link:hover, #logout-link:hover{
+    background: url(/images/application/top-link-bg.png) repeat;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+textarea{
+    font-family: Arial !important;
 }
