Text field make as read only while edit the calender field
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3069 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_fee_collection_edit.html.erb
+++ b/app/views/finance/_fee_collection_edit.html.erb
@@ -34,15 +34,15 @@
   </div>
   <div class="label-field-pair">
     <label for="reason">  <%= t('start_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'finance_fee_collection[start_date]',  I18n.l(@finance_fee_collection.start_date,:format=>:default) %></div>
+    <div class="text-input-bg"><%= calendar_date_select_tag 'finance_fee_collection[start_date]',  I18n.l(@finance_fee_collection.start_date,:format=>:default),:readonly=>true,:popup => "force"  %></div>
   </div>
   <div class="label-field-pair">
     <label for="reason">  <%= t('end_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'finance_fee_collection[end_date]',I18n.l(@finance_fee_collection.end_date,:format=>:default) %></div>
+    <div class="text-input-bg"><%= calendar_date_select_tag 'finance_fee_collection[end_date]',I18n.l(@finance_fee_collection.end_date,:format=>:default) ,:readonly=>true,:popup => "force" %></div>
   </div>
   <div class="label-field-pair">
     <label for="reason">  <%= t('due_date') %></label>
-    <div class="text-input-bg"><%= calendar_date_select_tag 'finance_fee_collection[due_date]', I18n.l(@finance_fee_collection.due_date,:format=>:default)%></div>
+    <div class="text-input-bg"><%= calendar_date_select_tag 'finance_fee_collection[due_date]', I18n.l(@finance_fee_collection.due_date,:format=>:default),:readonly=>true,:popup => "force" %></div>
   </div>
 
   <div class="extender"></div>
