--- a/app/views/finance/income_list.html.erb
+++ b/app/views/finance/income_list.html.erb
@@ -31,11 +31,11 @@
     <% form_for :report, :url => {:action => 'income_list_update'} do |form| %>
       <div class="label-field-pair">
         <label><%= t('select_start_date') %>:</label>
-        <div class="input-container"><%= calendar_date_select_tag 'start_date', I18n.l(Date.today,:format=>:normal) %></div>
+        <div class="input-container"><%= calendar_date_select_tag 'start_date', I18n.l(Date.today,:format=>:default) %></div>
       </div>
       <div class="label-field-pair">
         <label><%= t('select_end_date') %>: </label>
-        <div class="input-container"><%= calendar_date_select_tag 'end_date', I18n.l(Date.today,:format=>:normal) %></div>
+        <div class="input-container"><%= calendar_date_select_tag 'end_date', I18n.l(Date.today,:format=>:default) %></div>
       </div>
 
       <%=  submit_tag "► #{t('ok')}",:class=>'submit_button' %>
