Added read only in calender tag field
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3089 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/admission2.html.erb
+++ b/app/views/student/admission2.html.erb
@@ -96,7 +96,7 @@
         <div class="label-field-pair">
           <label for="parent_detail_dob"><%= t("date_of_birth") %></label>
           <div class="text-input-bg"><%= calendar_date_select_tag 'guardian[dob]', nil,
-              :year_range => 60.years.ago..20.years.ago %></div>
+              :year_range => 60.years.ago..20.years.ago, :readonly=>true, :popup=>"force" %></div>
         </div>
 
         <hr class="label-underline"></hr>
