--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -65,7 +65,7 @@
         <label for="configuration_currency_type"><%= t('finance_year_start_date') %></label>
         <div class="text-input-bg">
           <%= calendar_date_select_tag 'configuration[financial_year_start_date]', @config[:financial_year_start_date],
-            :year_range => 15.years.ago..5.years.from_now %>
+            :year_range => 15.years.ago..5.years.from_now, :readonly=>true, :popup=>"force" %>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
         <label for="configuration_currency_type"><%= t('finance_year_end_date') %></label>
         <div class="text-input-bg">
           <%= calendar_date_select_tag 'configuration[financial_year_end_date]', @config[:financial_year_end_date],
-            :year_range => 15.years.ago..5.years.from_now %>
+            :year_range => 15.years.ago..5.years.from_now, :readonly=>true, :popup=>"force" %>
         </div>
       </div>
 
