--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -69,12 +69,12 @@
 
         <div class="label-field-pair">
           <div class="label-container"><%= batch_form.label "#{t('start_date')}" %></div>
-          <div class="input-container"><%= calendar_date_select_tag 'course[batches_attributes][0][start_date]', I18n.l(Date.today,:format=>:default) %></div>
+          <div class="input-container"><%= calendar_date_select_tag 'course[batches_attributes][0][start_date]', I18n.l(Date.today,:format=>:default), :readonly=>true, :popup=>"force" %></div>
         </div>
 
         <div class="label-field-pair">
           <div class="label-container"><%= batch_form.label "#{t('end_date')}" %></div>
-          <div class="input-container"><%= calendar_date_select_tag 'course[batches_attributes][0][end_date]', I18n.l(Date.today + 1.year,:format=>:default) %></div>
+          <div class="input-container"><%= calendar_date_select_tag 'course[batches_attributes][0][end_date]', I18n.l(Date.today + 1.year,:format=>:default), :readonly=>true, :popup=>"force" %></div>
         </div>
 
       <% unless @grade_types.blank? %>
