--- a/app/views/employee/create_monthly_payslip.erb
+++ b/app/views/employee/create_monthly_payslip.erb
@@ -53,7 +53,7 @@
       <label for="salary_date"><%= t('salary_date') %></label>
       <div class="payslip-input-bg">
 <%= calendar_date_select_tag 'salary_date', I18n.l(Date.today,:format=>:default),
-            :year_range => 2.years.ago..0.years.from_now %></div>
+            :year_range => 2.years.ago..0.years.from_now , :readonly=>true, :popup=>"force"%></div>
       </div>
 
       <% @independent_categories.each do |c| %>
