--- a/app/views/exam/_exam_marks_form.erb
+++ b/app/views/exam/_exam_marks_form.erb
@@ -80,14 +80,14 @@
         <td class="col-1">
          <div class="label-field-pair3">
         <div class="text-input-bg3">
-        <%= exam_form.calendar_date_select :start_time %>
+        <%= exam_form.calendar_date_select :start_time,:readonly=>true,:popup=>"force"%>
         </div>
         </div>
         </td>
         <td class="col-1">
          <div class="label-field-pair3">
         <div class="text-input-bg3">
-        <%= exam_form.calendar_date_select :end_time %>
+        <%= exam_form.calendar_date_select :end_time,:readonly=>true,:popup=>"force" %>
         </div>
         </div></td>
         <td class="col-1">
