--- a/app/views/student/admission1.html.erb
+++ b/app/views/student/admission1.html.erb
@@ -64,7 +64,7 @@
           <label for="student_admission_date"><%= t('admission_date') %> <span class="necessary-field">*</span> </label>
           <div class="text-input-bg-admission">
             <%= calendar_date_select_tag 'student[admission_date]', I18n.l(Date.today,:format=>:default),
-              :year_range => 15.years.ago..5.years.from_now %>
+              :year_range => 15.years.ago..5.years.from_now, :readonly=>true, :popup=>"force" %>
           </div>
         </div>
 
@@ -107,7 +107,7 @@
           <label for="student_date_of_birth"><%= t('date_of_birth') %> <span class="necessary-field">*</span> </label>
           <div class="text-input-bg">
             <%= calendar_date_select_tag 'student[date_of_birth]',
-              I18n.l(Date.today-5.years,:format=>:default) , :year_range => 40.years.ago..0.years.ago %>
+              I18n.l(Date.today-5.years,:format=>:default) , :year_range => 40.years.ago..0.years.ago, :readonly=>true, :popup=>"force" %>
           </div>
         </div>
 
