new hook added for checkbox options in configuration settings
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3117 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -154,6 +154,10 @@
       <% else %>
         <%= check_box :configuration, :enable_news_comment_moderation, :checked => false %><%=  "Enable News  Comment Moderation" %>
       <% end %>
+      <% FedenaPlugin::REGISTERED_HOOKS[:general_settings_checkbox].each do |mod| %>
+        <br/>
+        <%= render :partial=>mod.camelize.constantize.send("general_settings_checkbox") %>
+      <% end %>
       <div id="submit-button">
         <%= submit_tag "► #{t('update')}" %>
       </div>
