--- a/app/views/employee/admission1.erb
+++ b/app/views/employee/admission1.erb
@@ -55,7 +55,7 @@
       <div class="label-field-pair">
         <label for="employee_joining_date"><%= t('joining_date') %></label>
         <div class="text-input-bg"><%= calendar_date_select_tag 'employee[joining_date]', I18n.l(Date.today,:format=>:default),
-            :year_range => 25.years.ago..0.years.from_now , :readonly=>true, :popup=>"force"%></div>
+            :year_range => 25.years.ago..0.years.from_now , :popup=>"force"%></div>
       </div>
       <hr class="label-underline"></hr>
       <div class="label-field-pair">
@@ -93,7 +93,7 @@
       <div class="label-field-pair">
         <label for="dob"><%= t('date_of_birth') %><span class="necessary-field">*</span></label>
         <div class="text-input-bg"><%= calendar_date_select_tag 'employee[date_of_birth]', I18n.l(Date.today-10.years,:format=>:default),
-            :year_range => 70.years.ago..4.years.ago, :readonly=>true, :popup=>"force" %></div>
+            :year_range => 70.years.ago..4.years.ago, :popup=>"force" %></div>
       </div>
       <hr class="label-underline"></hr>
       <div class="label-field-pair">
