--- a/app/views/student/edit.erb
+++ b/app/views/student/edit.erb
@@ -49,7 +49,7 @@
           <label for="master_student_admission_date"><%= t('admission_date') %> <span class="necessary-field">*</span></label>
           <div class="text-input-bg">
             <%= calendar_date_select_tag 'student[admission_date]', I18n.l(@student.admission_date,:format=>:default),
-              :year_range => 15.years.ago..5.years.from_now,:readonly=>true,:popup => "force" %>
+              :year_range => 15.years.ago..5.years.from_now,:popup => "force" %>
           </div>
         </div>
 
