--- a/public/stylesheets/rtl/finance/master_fees.css
+++ b/public/stylesheets/rtl/finance/master_fees.css
@@ -165,6 +165,33 @@
     width: 205px;
 }
 
+.each_category{
+    font-size: 12px;
+    overflow:auto;
+    width:213px;;
+
+}
+.each_category input{
+    float:right;
+    width:auto;
+}
+
+.each_category label {
+    float: right;
+    margin-top: -7px;
+    width: 178px;
+    font-size:13px;
+    font-weight: normal;
+    margin-right: 8px;
+}
+.categories {
+    height: 100px;
+    overflow: auto;
+    max-width: 220px;
+    float: right;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 .batches {
     height: 183px;
@@ -216,3 +243,4 @@ table#listing td.col-4 {
 table#listing td.col-1 {
     width: 2%;
 }
+
